--- a/themes/FixIt/assets/css/_variables.scss
+++ b/themes/FixIt/assets/css/_variables.scss
@@ -41,7 +41,7 @@ $global-link-color: #161209 !default;
 $global-link-color-dark: #a9a9b3 !default;
 
 // Color of the hover link
-$global-link-hover-color: #C7B198 !default;
+$global-link-hover-color: #632626 !default;
 $global-link-hover-color-dark: #fff !default;
 
 // Color of the border
