--- a/themes/FixIt/assets/css/_variables.scss
+++ b/themes/FixIt/assets/css/_variables.scss
@@ -41,7 +41,7 @@ $global-link-color: #161209 !default;
 $global-link-color-dark: #a9a9b3 !default;
 
 // Color of the hover link
-$global-link-hover-color: #361500 !default;
+$global-link-hover-color: #406882 !default;
 $global-link-hover-color-dark: #fff !default;
 
 // Color of the border
@@ -97,7 +97,7 @@ $single-link-color: #2d96bd !default;
 $single-link-color-dark: #55bde2 !default;
 
 // Color of the hover single link
-$single-link-hover-color: #ef3982 !default;
+$single-link-hover-color: #406882 !default;
 $single-link-hover-color-dark: #bdebfc !default;
 
 // Color of the table background
