--- a/themes/FixIt/assets/css/_variables.scss
+++ b/themes/FixIt/assets/css/_variables.scss
@@ -93,12 +93,12 @@ $toc-title-font-size: 1.2rem !default;
 $toc-content-font-size: 1rem !default;
 
 // Color of the single link
-$single-link-color: #2d96bd !default;
-$single-link-color-dark: #55bde2 !default;
+$single-link-color: #6998AB !default;
+$single-link-color-dark: #6998AB !default;
 
 // Color of the hover single link
 $single-link-hover-color: #406882 !default;
-$single-link-hover-color-dark: #bdebfc !default;
+$single-link-hover-color-dark: #406882 !default;
 
 // Color of the table background
 $table-background-color: #fff !default;
